@startuml Inventario
class Local{

    +Nombre:string
    +Direccion:string
    +Telefono:string
    +NombreAdmin:string
}


class Administrador{
    -Id: int
    -nombre_Usuario:string
    +AgregarProducto()
    +EliminarProducto()
    +AgregarProveedor()
    +EliminarProveedor()
    +AgregarCliente()
    +EliminarCliente()
    +AgregarOrden()
    +EliminarOrden()
}


class Producto {
    - id_producto : int
    - nombre : string
    - descripcion : string
    - precio : float
    - cantidad : int
    + get_id_producto() : int
    + get_nombre() : string
    + get_descripcion() : string
    + get_precio() : float
    + get_cantidad() : int
}

class Proveedor {
    - id_proveedor : string
    - nombre : string
    - direccion : string
    - telefono : string
    - correo : string
    + get_id_proveedor() : string
    + get_nombre() : string
    + get_direccion() : string
    + get_telefono() : string
    + get_correo() : string
}

class Cliente {
    - cedula_cliente : string
    - nombre : string
    - direccion : string
    - telefono : string
    - correo : string
    + get_cedula_cliente() : string
    + get_nombre() : string
    + get_direccion() : string
    + get_telefono() : string
    + get_correo() : string
}

class Orden {
    - id_orden : int
    - cedula_cliente : string
    - fecha : date
    - total : float
    + get_id_orden() : int
    + get_cedula_cliente() : string
    + get_fecha() : date
    + get_total() : float
}
Administrador "1" --> Producto : Agregar/Eliminar
Administrador "1" --> Proveedor:Agregar/Eliminar
Administrador "1" --> Cliente:Agregar/Eliminar

Producto "1" *-- "0..*" Orden : contiene
Proveedor "1" *-- "0..*" Orden : suministra
Cliente "1" *-- "0..*" Orden : realiza
Local "1"-->"...*" Administrador : Puede tener

@enduml